Fixes and more docs across many areas